fix: eth balance spacing

--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -5,9 +5,11 @@ nav {
   background-color: #e8cff1;
   border-radius: 10px;
   padding: 2px;
-  padding-left: 7px;
   justify-content: center;
   align-items: center;
+  span {
+    padding: 0px 5px;
+  }
   .address-hash {
     display: flex;
     text-transform: none;
